# Angewandte_Informatik_Code

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: util.h
shader/: example-shader.fs.glsl  example-shader.vs.glsl  example_shader.fs.glsl  example_shader.vs.glsl
src/: example.c  main.c  util.c
